deployment/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http2
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: https
  selector:
    app: http2
